--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:padding="16dp"
         android:text="Comprar"
         android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:background="@drawable/background_textview"/>
 
     <!-- Tabs -->
     <HorizontalScrollView
@@ -27,71 +28,146 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="8dp">
 
-            <Button
-                android:id="@+id/tab_vuelos"
+            <!-- Vuelo -->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/Vuelo"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center_vertical|start"
-                android:drawableStart="@drawable/ic_vuelo"
-                android:drawablePadding="8dp" />
+                android:paddingEnd="16dp">
+                <ImageButton
+                    android:id="@+id/tab_vuelos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/Vuelo"
+                    app:srcCompat="@drawable/ic_vuelo"
+                    android:tint="#FFFFFF"
+                android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Vuelo"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/tab_paquetes"
+            <!-- Paquetes -->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/Paquetes"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center_vertical|start"
-                android:drawableStart="@drawable/ic_paquetes"
-                android:drawablePadding="8dp" />
+                android:paddingEnd="16dp">
+                <ImageButton
+                    android:id="@+id/tab_paquetes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/Paquetes"
+                    app:srcCompat="@drawable/ic_paquetes"
+                    android:tint="#FFFFFF"
+                android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Paquetes"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/tab_hoteles"
+            <!-- Hoteles -->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/Hoteles"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center_vertical|start"
-                android:drawableStart="@drawable/ic_hoteles"
-                android:drawablePadding="8dp" />
+                android:paddingEnd="16dp">
+                <ImageButton
+                    android:id="@+id/tab_hoteles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/Hoteles"
+                    app:srcCompat="@drawable/ic_hoteles"
+                    android:tint="#FFFFFF"
+                android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Hoteles"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/tab_autos"
+            <!-- Autos -->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/Autos"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center_vertical|start"
-                android:drawableStart="@drawable/carro"
-                android:drawablePadding="8dp" />
+                android:paddingEnd="16dp">
+                <ImageButton
+                    android:id="@+id/tab_autos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/Autos"
+                    app:srcCompat="@drawable/carro"
+                    android:tint="#FFFFFF"
+                android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Autos"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/tab_asistencia"
+            <!-- Asistencia -->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:text="@string/Asistencia"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center_vertical|start"
-                android:drawableStart="@drawable/ic_asistencia"
-                android:drawablePadding="8dp" />
+                android:paddingEnd="16dp">
+                <ImageButton
+                    android:id="@+id/tab_asistencia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/Asistencia"
+                    app:srcCompat="@drawable/ic_asistencia"
+                    android:tint="#FFFFFF"
+                android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Asistencia"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
         </LinearLayout>
     </HorizontalScrollView>
+
+
+
+
 
 
     <!-- Formulario -->
@@ -212,17 +288,40 @@
                 android:layout_marginTop="8dp"
                 android:textColor="#000000" />
 
-            <!-- Botón de búsqueda -->
-            <Button
-                android:id="@+id/btn_buscar"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:drawableStart="@drawable/ic_search"
-                android:drawablePadding="8dp"
-                android:text="@string/Vuelos"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:padding="8dp">
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/Vuelos"
+                    app:srcCompat="@drawable/ic_search"
+                    android:background="@android:color/transparent"
+                    android:layout_marginEnd="8dp"/>
+
+                <TextView
+                    android:id="@+id/tv_buscar_vuelos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FF0000"
+                    android:gravity="center"
+                    android:text="BUSCAR VUELOS"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:background="@drawable/rounded_edittext"
+                    android:textSize="14sp"
+                    android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"/>
+            </LinearLayout>
+
+
+</LinearLayout>
     </ScrollView>
 
     <!-- Footer -->
